# size--

./: .gitignore  CMakeLists.txt  beemovie.txt  test.pal  test.txt
readme/: guidelines.txt  pal.txt
src/: controller.cpp  controller.h  main.cpp  pal.cpp  pal.h
src/algorithms/: bisection.h  broken.h  lzw.h  none.h  repair.cpp  repair.h  sequitur.cpp  sequitur.h  type.cpp  type.h
src/algorithms/sequitur/: Node.h  TableValue.h  sequitur.cpp  sequitur.h
src/bitio/: bitreader.h  bitwriter.h
src/huffman/: decoder.h  encoder.h  huffman.cpp  huffman.h
src/pal/: bitreader.h  bitwriter.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  io.h  metadata.h  onlineHelper.h  pal.cpp  pal.h  settings.h
src/pal/huffman/: huffman.cpp  huffman.h  huffmanDecoder.h  huffmanEncoder.h
src/util/: production.h  settings.h  timer.h  variable.h
test/: ward_encoded  ward_input  ward_output
